added custom.scss to fix dark background

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,3 +1,4 @@
+// SCSS file adapted from https://silvia.rbind.io/2020-06-16-dark-theme-custom-with-atom/
 // Saved as custom.scss in `/assets/scss/custom.scss` relative to the website root
 // https://sourcethemes.com/academic/docs/customization/
 
